added gradle dependency into README dile

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
-
+        classpath 'com.novoda:bintray-release:0.4.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,4 +20,13 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    userOrg = 'soulyaroslav'
+    groupId = 'com.steelkiwi'
+    uploadName = 'increment-product-view'
+    description = 'Interesting concept of products incrementation'
+    publishVersion = '1.0.0'
+    licences = ['Apache-2.0']
 }
